# ouc-info

./: package-lock.json  package.json
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  utils.rs
src/components/: Login.vue  Main.vue
src/router/: index.js
